[package]
name = "rep-diesel-mysql-error"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2", features = ["mysql", "r2d2", "chrono", "64-column-tables", "numeric"] }
dotenv = "0.15"
env_logger = "0.11.8"
log = "0.4.27"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
